- performance optimisations (#5)
- fix "<<=" being seen as heredoc, misparsing of "y=>" (#6)
- tweak docs to clarify extract_tagged takes regexes (#3) - thanks @jhannah for report
- modernise tests (#2)

2.04 2020-12-11

    - Fixed INSTALLDIRS to account for the @INC reordering change in Perl 5.12.
      See Perl RT#116479 for details.  (Text-Balanced entered the perl core in
      Perl 5.7.1 so that's what the lower bound of the check should strictly be,
      but since we only support Perl 5.8.1 and higher anyway we do not need to
      check the lower bound.  The upper bound is correctly Perl 5.11.0 since the
      @INC reordering change in question (Perl core commit #b9ba2fadb1) first
      appeared in Perl 5.11.0.)

    - Removed superfluous loading of SelfLoader.  [<nick@ccl4.org>, CPAN
      RT#85572]

    - Minor documentation patch.  [<whatever@davidnicol.com>, CPAN RT#52623]

    - Typo fixes.  [<dsteinbrunner@pobox.com>, CPAN RT#85373]

    - Added optional Changes testing (skipped unless AUTHOR_TESTING).

    - Reformatted Changes file as per CPAN::Changes::Spec.

    - Added optional POD coverage testing (skipped unless AUTHOR_TESTING).

    - Added optional Perl::Critic testing (skipped unless AUTHOR_TESTING).

    - Made code Perl::Critic clean.

    - Included GitHub repository URLs in metadata now that source code has been
      uploaded to GitHub.

    - Included META.json file in addition to META.yml.

    - Set minimum required ExtUtils::MakeMaker version to 6.64 to ensure that
      all parameters used are supported, to save jumping through hoops to
      support earlier versions.  (This should not be a problem since
      ExtUtils::MakeMaker 6.64 is easily installed into Perl 5.8.1 and above,
      that being the whole point of the new choice of minimum supported Perl
      version.)

    - Set minimum required Perl version to 5.8.1.  This is in line with the
      minimum requirement of the "Perl Toolchain".

2.03 2015-03-04
